--- a/Dockerfile.alpine
+++ b/Dockerfile.alpine
@@ -34,5 +34,6 @@ RUN if [ "$TARGETPLATFORM" = "linux/amd64" ]; then export ARM_ARCH=x86_64; \
 # Add Toolchain to PATH
 ENV PATH="$PATH:${TOOLS_PATH}/bin"
 
-ADD build.sh /usr/local/bin/build.sh
-ENTRYPOINT ["/usr/local/bin/build.sh"]
+# ADD build.sh /usr/local/bin/build.sh
+# ENTRYPOINT ["/usr/local/bin/build.sh"]
+CMD ["/bin/bash"]
