--- a/Dockerfile.debian
+++ b/Dockerfile.debian
@@ -32,5 +32,6 @@ RUN if [ "$TARGETPLATFORM" = "linux/amd64" ]; then export ARM_ARCH=x86_64; \
 ENV PATH="$PATH:${TOOLS_PATH}/bin"
 
 # Add Entrypoint script
-ADD build.sh /usr/local/bin/build.sh
-ENTRYPOINT ["/usr/local/bin/build.sh"]
+# ADD build.sh /usr/local/bin/build.sh
+# ENTRYPOINT ["/usr/local/bin/build.sh"]
+CMD ["/bin/bash"]
